# pygmi

./: .buildinfo  .gitignore  .spyderproject  CHANGES.rst  CHANGES.txt  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST  MANIFEST.in  PYGMI2.cmd  PyGMI.cmd  README.md  README.rst  README.txt  api.html  bholes.cm.html  bholes.dm.html  bholes.html  cluster.cm.html  cluster.dm.html  cluster.html  cluster.ref.html  em.dm.html  em.html  em.ref.html  errors_and_warnings.txt  eseis.cm.html  eseis.dm.html  eseis.html  eseis.ref.html  file.html  genindex.html  gravity.dm.html  gravity.html  gravity.ref.html  index.html  install.html  mag.dm.html  mag.html  (+53 more)
.github/workflows/: draft-pdf.yml
.pylint.d/: quickstart1.stats
_sources/: api.rst.txt  api.txt  bholes.cm.rst.txt  bholes.dm.rst.txt  bholes.rst.txt  cluster.cm.rst.txt  cluster.cm.txt  cluster.dm.rst.txt  cluster.dm.txt  cluster.ref.rst.txt  cluster.rst.txt  cluster.txt  em.dm.rst.txt  em.ref.rst.txt  em.rst.txt  eseis.cm.rst.txt  eseis.dm.rst.txt  eseis.ref.rst.txt  eseis.rst.txt  file.rst.txt  gravity.dm.rst.txt  gravity.ref.rst.txt  gravity.rst.txt  index.rst.txt  index.txt  install.rst.txt  install.txt  mag.dm.rst.txt  mag.ref.rst.txt  mag.rst.txt  mt.cm.rst.txt  mt.dm.rst.txt  mt.ref.rst.txt  mt.rst.txt  pfmod.cm.rst.txt  pfmod.cm.txt  pfmod.dm.rst.txt  pfmod.dm.txt  pfmod.ref.rst.txt  pfmod.ref.txt  (+50 more)
_static/: alabaster.css  custom.css  default - Copy.css.old  documentation_options.js
docs/: Makefile  conf.py  index.rst  make.bat  makeclean.bat
paper/: paper.bib  paper.md
pygmi/: __init__.py  datatypes.py  main.py  menu_default.py  misc.py  ptimer.py  start.py  startup.py  version.py
pygmi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pygmi/.pylint.d/: pygmi.main1.stats
pygmi/bholes/: __init__.py  coreint.py  coremask.py  coremeta.py  graphs.py  hypercore.py  iodefs.py  logplot.py  logplot.xlsx  menu.py
pygmi/clust/: __init__.py  cluster.py  crisp_clust.py  datatypes.py  fuzzy_clust.py  graphs.py  graphtool.py  menu.py  plot_graphs.py  segmentation.py  super_class.py  var_ratio.py  xie_beni.py
pygmi/em/: __init__.py  birrp.py  dataprep.py  graphs.py  iodefs.py  menu.py  mt.py  tdem.py
pygmi/eseis/: __init__.py  dataprep.py  graphs.py  iodefs.py  menu.py
pygmi/grav/: __init__.py  dataprep.py  iodefs.py  menu.py
pygmi/helpdocs/: pygmi.bhole.rawcore.html  pygmi.clust.cluster.html  pygmi.clust.segmentation.html  pygmi.em.tdem1d.html  pygmi.grav.dataprep.processdata.html  pygmi.grav.iodefs.importpointdata.html  pygmi.main.html  pygmi.mt.edit.html  pygmi.mt.occam1d.html  pygmi.mt.rotate.html  pygmi.mt.static.html  pygmi.pfmod.dataprep.importpicture.html  pygmi.pfmod.ddisp.html  pygmi.pfmod.iodefs.exportkmz.html  pygmi.pfmod.iodefs.importpicture.html  pygmi.pfmod.layer.html  pygmi.pfmod.mext.html  pygmi.pfmod.minv.html  pygmi.pfmod.misc.mergemod3d.html  pygmi.pfmod.misc.rangedcopy.html  pygmi.pfmod.param.html  pygmi.pfmod.prof.html  pygmi.pfmod.pview.html  pygmi.raster.cooper.agc.html  pygmi.raster.cooper.gradients.html  pygmi.raster.cooper.tilt.html  pygmi.raster.cooper.visibility.html  pygmi.raster.dataprep.cont.html  pygmi.raster.dataprep.datagrid.html  pygmi.raster.dataprep.datalayerstack.html  pygmi.raster.dataprep.datamerge.html  pygmi.raster.dataprep.datareproj.html  pygmi.raster.dataprep.rtp.html  pygmi.raster.ginterp.html  pygmi.raster.igrf.html  pygmi.raster.iodefs.exportraster.html  pygmi.raster.normalisation.html  pygmi.raster.smooth.html  pygmi.raster.tiltdepth.html  pygmi.rsense.change.html  (+13 more)
pygmi/mag/: IGRF13.COF  __init__.py  dataprep.py  igrf.py  igrf2.py  menu.py  tiltdepth.py
pygmi/mt/: __init__.py  birrp.py  dataprep.py  graphs.py  iodefs.py  menu.py  mt.py
pygmi/pfmod/: __init__.py  c1.cmd  c2.cmd  cubes.py  cubes2.py  datatypes.py  gm3d.py  grvmag3d.py  grvmag3d_old.py  grvmag3dtest.py  grvmagc.pyx  grvmagc_27_x64.html  grvmagc_27_x64.pyd  grvmagc_27_x86.html  grvmagc_27_x86.pyd  grvmagc_33_x64.html  grvmagc_33_x64.pyd  grvmagc_33_x86.html  grvmagc_33_x86.pyd  grvmagc_34_x64.pyd  grvmagc_34_x86.pyd  iodefs.py  menu.py  misc.py  mvis3d.py  mvis3dqt.py  pfinvert.py  pfmod.py  show_table.py  tab_ddisp.py  tab_layer.py  tab_mext.py  tab_param.py  tab_prof.py  tab_pview.py  tab_tparam.py  tab_tprof.py  tensor3d.py  tpfmod.py
pygmi/point/: __init__.py  datatypes.py  iodefs.py  menu.py  rose.py
pygmi/raster/: __init__.py  anaglyph.py  cliptozoom.py  cooper.py  dataprep.py  datatypes.py  equation_editor.py  filters2d.py  ginterp.py  graphs.py  igrf.py  iodefs.py  lzrw1_kh.py  menu.py  misc.py  modest_image.py  modest_ioimage.py  normalisation.py  reproj.py  show_table.py  smooth.py  stettler.py  tiltdepth.py
pygmi/rsense/: L2A_GIPP.xml  __init__.py  change.py  change_viewer.py  dataprep.py  emit.py  features.py  graphs.py  hypercore.py  hyperspec.py  iodefs.py  landsat_composite.py  menu.py  ratios.py  segmentation.py  topo.py  transforms.py
pygmi/seis/: __init__.py  ai.py  beachball.py  datatypes.py  del_rec.py  descriptions.txt  graphs.py  iodefs.py  menu.py  misc.py  (+2 more)
stylesheets/: stylesheet.css
(+86 files in other folders)
