[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'pygmi'
dynamic = ['version']
authors = [{name = 'Patrick Cole', email = 'pcole@geoscience.org.za'}]
maintainers = [{name = 'Patrick Cole', email = 'pcole@geoscience.org.za'}]
description = 'Python Geoscience Modelling and Interpretation'
readme = 'README.rst'
requires-python = '>=3.12'
license = {text = 'GNU General Public License v3 (GPLv3)'}
keywords=['Geoscience', 'Geophysics', 'Magnetic', 'Gravity', 'Modelling',
          'Interpretation', 'Remote Sensing']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Win32 (MS Windows)',
    'Environment :: X11 Applications :: Qt',
    'Intended Audience :: Education',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

dependencies = [
                'fiona>=1.9.5',
                'geopandas>=0.14.4',
                'h5netcdf>=1.3.0',
                'matplotlib>=3.9.0',
                'mtpy>=1.1.5',
                'natsort>=8.4.0',
                'numexpr>=2.10.1',
                'openpyxl>=3.1.2',
                'psutil>=6.0.0',
                'pyopengl>=3.1.7',
                'pyqt5>=5.15.10',
                'pytest>=8.2.2',
                'rasterio>=1.3.9',
                'rioxarray>=0.15.6',
                'scikit-image>=0.24.0',
                'shapelysmooth>=0.2.0',
                'simpeg>=0.21.1',
                ]

[project.urls]
homepage = 'http://patrick-cole.github.io/pygmi/'
documentation = 'https://patrick-cole.github.io/pygmi/wiki.html'
repository =  'https://github.com/Patrick-Cole/pygmi.git'
changelog = 'https://github.com/Patrick-Cole/pygmi/blob/pygmi3/CHANGES.rst'

[project.scripts]
pygmi-cli = 'pygmi.main:main'

[project.gui-scripts]
pygmi-gui = 'pygmi.main:main'
pygmi = 'pygmi.main:main'

[tool.setuptools.package-dir]
pygmi = 'pygmi'

[tool.setuptools.dynamic]
version = {attr = 'pygmi.version.__version__'}